# quick-launcher

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.scratch/quick-launcher-app/: PRD.md
.scratch/quick-launcher-app/issues/: 01-core-tray-app.md  02-advanced-menu.md
docs/agents/: domain.md
src/quick_launcher/: __main__.py  app.py  config.py  menu.py  runner.py
tests/: test_config.py  test_integration.py  test_menu.py
